include_HEADERS = dvi.h error.h io.h tfm.h numbers.h pdfobj.h pdfdoc.h
bin_PROGRAMS = dvitest tfmtest pdftest doctest
dvitest_SOURCES = dvitest.c numbers.c dvi.c io.c mem.c
tfmtest_SOURCES = tfmtest.c numbers.c tfm.c io.c mem.c
pdftest_SOURCES = pdftest.c pdfobj.c mem.c 
doctest_SOURCES = doctest.c pdfdoc.c pdfobj.c mem.c

