dnl Process this file with autoconf to produce a configure script.
dnl PACKAGE(dvipdf)
dnl VERSION(0.01)
AC_INIT(dvi.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(dvipdf, 0.01)

AC_PREFIX_DEFAULT(/usr/local/texmf)

CFLAGS="-g --pedantic --ansi"
AC_SUBST(CFLAGS)
dnl MAX_PAGES=4096
dnl AC_DEFINE_UNQUOTED(MAX_PAGES, $MAX_PAGES)
dnl MAX_FONTS=256
dnl AC_DEFINE_UNQUOTED(MAX_FONTS, $MAX_FONTS)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_ARG_PROGRAM

dnl Checks for libraries.

dnl Checks for header files.
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.


AC_OUTPUT(Makefile paths.h)

