dnl Process this file with autoconf to produce a configure script.
AC_INIT(dvipdfm.c)

AC_DEFINE(VERSION,"0.7.4")
AC_DEFINE(PACKAGE,"dvipdfm")

AC_CONFIG_HEADER(c-auto.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Don't bother going further if we don't have kpse.
AC_HAS_KPSE_FORMATS
AC_CHECK_LIB(kpathsea, kpse_find_file, [AC_DEFINE(KPATHSEA) LIBS="-lkpathsea $LIBS"],
  AC_MSG_ERROR([kpathsea library not found
  
This version of dvipdfm requires the kpathsea library and its headers to be pre-installed]))

dnl Check for functions
AC_CHECK_FUNCS(basename)


dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -ln:
AC_CHECK_LIB(n, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_EXT_TIMEZONE
AC_TZ_HAS_TM_GMTOFF

AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(strspn)


AC_OUTPUT(Makefile)



